[tool.poetry]
name = "smartrent.py"
version = "0.0.1"
description = "Unofficial Python API for SmartRent devices"
readme = "README.md"
license = "LICENSE.md"
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "smartrent" }
]

[tool.poetry.dependencies]
aiohttp = "^3.7.4"
python = ">=3.6.1"
websockets = "^9.1"

[build-system]
requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0", "poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
