[tool.poetry]
name = "smartrent-py"
version = "0.5.0"
description = "Unofficial Python API for SmartRent devices"
readme = "README.md"
license = "MIT"
authors = ["Zachery Thomas <zacherythomas12@gmail.com>"]
repository = "https://github.com/zacherythomas/smartrent-py"
documentation = "https://smartrentpy.readthedocs.io"
packages = [
  { include = "smartrent" }
]

[tool.poetry.dependencies]
aiohttp = "^3.8.4"
python = ">=3.6.1,<4.0.0"
websockets = "^13.1"

[build-system]
requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0", "poetry>=0.12"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
